--- a/404.md
+++ b/404.md
@@ -4,6 +4,6 @@ title: 404 - Page not found
 permalink: /404.html
 ---
 
-Sorry, we can't find that page that you're looking for. You can try again by going [back to the homepage]({{ site.baseurl }}/).
+你进入了没有知识的荒原...
 
 [<img src="{{ site.baseurl }}/images/404.jpg" alt="Constructocat by https://github.com/jasoncostello" style="width: 400px;"/>]({{ site.baseurl }}/)
